chore: commit local changes for Platform Hardening
